--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,7 @@
 ---
-name: Code Server
+name: Shell
 category: Interactive Apps
 subcategory: Servers
 role: batch_connect
 description: |
-  This app will launch a [VS Code] server using [Code Server].
-
-  [VS Code]: https://code.visualstudio.com/
-  [Code Server]: https://coder.com/
+  This app will launch a shell through ttyd on target node.
